--- a/py/das_british_literary.html
+++ b/py/das_british_literary.html
@@ -46,7 +46,7 @@
 				<section class="specs" aria-labelledby="assessment-specs">
 					<h3 id="assessment-specs">Assessment Production Details</h3>
 
-					< class="specs-container">
+					<div class="specs-container">
 						<p><strong>Developer:</strong> Riya Das <a class="mail" href="mailto:ridas@pvamu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 
 						<p><strong>Peer Reviewer:</strong> Sarah Ohmer</p>
