--- a/py/das_british_literary.html
+++ b/py/das_british_literary.html
@@ -53,7 +53,7 @@
 
 						<p><strong>Assessment Guide:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
 						
-						<p><strong>Webpage Developer:</strong> Ava Bindas <a class="mail" href="mailto:akbindas@ucdavis.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>; Kristen Layne Figgins <a class="mail" href="mailto:kfiggins@uark.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a>; Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p>
+						<p><strong>Webpage Developer(s):</strong> Ava Bindas; Kristen Layne Figgins; Adrian S. Wisnicki</p>
 
 						<p><strong>Associated Assessment(s):</strong> Amanda Shubert, (Post-)Colonial Biography [coming soon]</p><!-- <a href="/html/assessments/(post-)colonial_biography.html">(Post-)Colonial Biography</a> -->
 
