--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						<li id="site-section-2"><a href="/html/lesson_plans.html"><span><i class="fa fa-book fa-fw"></i> Lesson Plans</span></a></li>
 						<li id="site-section-3"><a href="/html/syllabi.html"><span><i class="fa fa-pen fa-fw"></i> Syllabi</span></a></li>
 						<li id="site-section-4"><a href="/html/assessments.html"><span><i class="fa fa-info-circle fa-fw"></i> Assessments</span></a></li>
-						<li id="site-section-5"><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw"></i> About</span></a></li>
+						<!-- <li id="site-section-5"><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw"></i> About</span></a></li> -->
 					</ul>
 				</section>
 
@@ -203,8 +203,8 @@
 
 				<section class="small" aria-labelledby="image-details">
 					<h2 id="image-details">Carousel Image Details</h2>
-						<section aria-labelledby="new-edition">
-							<h3 class="carousel-image" id="new-edition">New Edition</h3>
+						<section aria-labelledby="community-edition">
+							<h3 class="carousel-image" id="community-edition">Community Edition</h3>
 
 							<p id="katsushika-hokusai"><em>Slide #1</em>: Katsushika Hokusai 葛飾 北斎. <a aria-label="External Link" href="https://www.artic.edu/artworks/89524/ariwara-no-narihirafrom-the-series-one-hundred-poems-explained-by-the-nurse-hyakunin-isshu-uba-ga-etoki"><em>Ariwara No Narihira – from the Series One Hundred Poems Explained by the Nurse (Hyakunin Isshu Uba Ga Etoki)</em></a>. [1835-36]. Art Institute of Chicago, Chicago, 1928.1094. Clarence Buckingham Collection. <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero 1.0 Universal</a> (CC0 1.0). Public Domain Dedication.</p>
 
