--- a/common/nav.html
+++ b/common/nav.html
@@ -15,6 +15,8 @@
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span id="syllabi">Syllabi</span></a></li>
 
+					<!-- <li role="none"><a role="menuitem" aria-haspopup="false" href="/html/assessments.html"><i class="fa fa-sticky-note fa-fw" aria-hidden="true"></i> <span id="syllabi">Assessments</span></a></li> -->
+
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span id="about">About</span></a></li>
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> <span>Contact</span></a></li>
@@ -35,6 +37,8 @@
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/lesson_plans.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> <span>Lesson Plans</span></a></li>
 		
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/syllabi.html"><i class="fa fa-pen fa-fw" aria-hidden="true"></i> <span>Syllabi</span></a></li>
+
+							<!-- <li role="none"><a role="menuitem" aria-haspopup="false" href="/html/assessments.html"><i class="fa fa-sticky-note fa-fw" aria-hidden="true"></i> <span id="syllabi">Assessments</span></a></li> -->
 		
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i> <span>About</span></a></li>
 
