--- a/sitemap.html
+++ b/sitemap.html
@@ -136,6 +136,17 @@
 							</ol>
 						</li>
 
+						<li role="none"><a href="/html/assessments.html"><span id="syllabi">Assessments</span></a>
+							<ol>
+								<li>Widening the Empire
+									<ol>
+										<li><a href="/html/assessments/(post-)colonial_biography.html">(Post-)Colonial Biography</a></li>
+										<li><a href="/html/assessments/recovering_reevaluating.html">Recovering and Reevaluating Anglophone Writers</a></li>
+									</ol>
+								</li>
+							</ol>
+						</li>
+
 						<li role="none"><a href="/html/about.html"><span id="about">About</span></a>
 							<ol>
 								<li><a href="/html/about/founding_developers.html">Founding Developers</a></li>
