--- a/html/assessments.html
+++ b/html/assessments.html
@@ -46,12 +46,12 @@
 				</section>
 
 				<section aria-labelledby="widening-empire-1">
-					<h3 id="widening-empire-1">Widening the Empire #1</h3>
+					<h3 id="widening-empire-1">Widening the Empire</h3>
 					<div><a href="/html/assessments/(post-)colonial_biography.html"><img loading="lazy" src="/img/assessments/tiles/uvc_0066-1324px.jpg" srcset="/img/assessments/tiles/uvc_0066-1324px.jpg 1324w, /img/assessments/tiles/uvc_0066-1136px.jpg 1136w, /img/assessments/tiles/uvc_0066-930px.jpg 930w, /img/assessments/tiles/uvc_0066-814px.jpg 814w, /img/assessments/tiles/uvc_0066-662px.jpg 662w, /img/assessments/tiles/uvc_0066-568px.jpg 568w, /img/assessments/tiles/uvc_0066-530px.jpg 530w, /img/assessments/tiles/uvc_0066-465px.jpg 465w, /img/assessments/tiles/uvc_0066-407px.jpg 407w, /img/assessments/tiles/uvc_0066-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="“Arms of the British Empire”: Crest with lions and crowns, horned deer on either side, and woman with anchor above."/><span>(Post-)Colonial Biography</span></a></div>
 				</section>
 
 				<section aria-labelledby="widening-empire-2">
-					<h3 id="widening-empire-2">Widening the Empire #2</h3>
+					<h3 id="widening-empire-2">Widening the Empire</h3>
 					<div><a href="/html/assessments/recovering_reevaluating.html"><img style="object-position: 50% 0%;"  loading="lazy" src="/img/assessments/tiles/uvc_0059-0060-1324px.jpg" srcset="/img/assessments/tiles/uvc_0059-0060-1324px.jpg 1324w, /img/assessments/tiles/uvc_0059-0060-1136px.jpg 1136w, /img/assessments/tiles/uvc_0059-0060-930px.jpg 930w, /img/assessments/tiles/uvc_0059-0060-814px.jpg 814w, /img/assessments/tiles/uvc_0059-0060-662px.jpg 662w, /img/assessments/tiles/uvc_0059-0060-568px.jpg 568w, /img/assessments/tiles/uvc_0059-0060-530px.jpg 530w, /img/assessments/tiles/uvc_0059-0060-465px.jpg 465w, /img/assessments/tiles/uvc_0059-0060-407px.jpg 407w, /img/assessments/tiles/uvc_0059-0060-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="(Left) Head and shoulders portrait of Amy Levy. (Right) Head and shoulders portrait of Grant Morrison."/><span>Recovering and Reevaluating Anglophone Writers</span></a></div>
 				</section>
 			</main>
