--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -46,55 +46,55 @@
 				</section>
 
 				<section aria-labelledby="positionality-5">
-					<h3 id="positionality-5">Positionality #5</h3>
+					<h3 id="positionality-5">Positionality</h3>
 					<div><a href="/html/zoomcasts/chaozon-bauer.html"><img loading="lazy" src="/img/zoomcasts/chaozon-bauer-930px.jpg" srcset="/img/zoomcasts/chaozon-bauer-930px.jpg 930w, /img/zoomcasts/chaozon-bauer-816px.jpg 816w, /img/zoomcasts/chaozon-bauer-663px.jpg 663w, /img/zoomcasts/chaozon-bauer-532px.jpg 532w, /img/zoomcasts/chaozon-bauer-465px.jpg 465w, /img/zoomcasts/chaozon-bauer-408px.jpg 408w, /img/zoomcasts/chaozon-bauer-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Pearl Chaozon Bauer"/><span>Pearl Chaozon Bauer</span></a></div>
 					<p>Tricia Lootens interviews Pearl Chaozon Bauer to discuss the latter's recent departure from higher ed. and the need to reenvision Victorian studies classrooms.</p>
 				</section>
 
 				<section aria-labelledby="literary-3">
-					<h3 id="literary-3">Beyond the Literary #3</h3>
+					<h3 id="literary-3">Beyond the Literary</h3>
 					<div><a href="/html/zoomcasts/kim-cobblah.html"><img loading="lazy" src="/img/zoomcasts/kim-cobblah-930px.jpg" srcset="/img/zoomcasts/kim-cobblah-1275px.jpg 1275w, /img/zoomcasts/kim-cobblah-930px.jpg 930w, /img/zoomcasts/kim-cobblah-816px.jpg 816w, /img/zoomcasts/kim-cobblah-663px.jpg 663w, /img/zoomcasts/kim-cobblah-532px.jpg 532w, /img/zoomcasts/kim-cobblah-465px.jpg 465w, /img/zoomcasts/kim-cobblah-408px.jpg 408w, /img/zoomcasts/kim-cobblah-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders images of Haejoo Kim and Anoff Nick Cobblah"/><span>Haejoo Kim and Anoff Nick Cobblah</span></a></div>
 					<p>Ryan D. Fong talks with Haejoo Kim and Anoff Nick Cobblah about race and teaching Victorian writings on science, medicine and technology.</p>
 				</section>
 
 				<section aria-labelledby="positionality-4">
-					<h3 id="positionality-4">Positionality #4</h3>
+					<h3 id="positionality-4">Positionality</h3>
 					<div><a href="/html/zoomcasts/servitje.html"><img loading="lazy" src="/img/zoomcasts/servitje-930px.jpg" srcset="/img/zoomcasts/servitje-1275px.jpg 1275w, /img/zoomcasts/servitje-930px.jpg 930w, /img/zoomcasts/servitje-816px.jpg 816w, /img/zoomcasts/servitje-663px.jpg 663w, /img/zoomcasts/servitje-532px.jpg 532w, /img/zoomcasts/servitje-465px.jpg 465w, /img/zoomcasts/servitje-408px.jpg 408w, /img/zoomcasts/servitje-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Lorenzo Servitje"/><span>Lorenzo Servitje</span></a></div>
 					<p>Ryan D. Fong talks with Lorenzo Servitje about the latter's entry into Victorian studies and becoming an interdisciplinary scholar of science, medicine, and literature.</p>
 				</section>
 
 				<section aria-labelledby="collaboration-1">
-					<h3 id="collaboration-1">Collaboration #1</h3>
+					<h3 id="collaboration-1">Collaboration</h3>
 					<div><a href="/html/zoomcasts/braham-ohri-simpson.html"><img loading="lazy" src="/img/zoomcasts/braham-ohri-simpson-930px.jpg" srcset="/img/zoomcasts/braham-ohri-simpson-1275px.jpg 1275w, /img/zoomcasts/braham-ohri-simpson-930px.jpg 930w, /img/zoomcasts/braham-ohri-simpson-816px.jpg 816w, /img/zoomcasts/braham-ohri-simpson-663px.jpg 663w, /img/zoomcasts/braham-ohri-simpson-532px.jpg 532w, /img/zoomcasts/braham-ohri-simpson-465px.jpg 465w, /img/zoomcasts/braham-ohri-simpson-408px.jpg 408w, /img/zoomcasts/braham-ohri-simpson-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders images of Kira Braham, Indu Ohri, Bre Simpson"/><span>Kira Braham, Indu Ohri, Bre Simpson</span></a></div>
 					<p>Kira Braham, Indu Ohri, Bre Simpson, and Adrian S. Wisnicki discuss the collaboration through which they developed lesson plans on Mary Seacole.</p>
 				</section>
 
 				<section aria-labelledby="positionality-3">
-					<h3 id="positionality-3">Positionality #3</h3>
+					<h3 id="positionality-3">Positionality</h3>
 					<div><a href="/html/zoomcasts/walters.html"><img loading="lazy" src="/img/zoomcasts/walters-930px.jpg" srcset="/img/zoomcasts/walters-1275px.jpg 1275w, /img/zoomcasts/walters-930px.jpg 930w, /img/zoomcasts/walters-816px.jpg 816w, /img/zoomcasts/walters-663px.jpg 663w, /img/zoomcasts/walters-532px.jpg 532w, /img/zoomcasts/walters-465px.jpg 465w, /img/zoomcasts/walters-408px.jpg 408w, /img/zoomcasts/walters-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Alisha Walters"/><span>Alisha Walters</span></a></div>
 					<p>Alisha Walters and Pearl Chaozon Bauer discuss the necessity of re-training as Victorianists so as to support student needs and the field’s survival.</p>
 				</section>
 
 				<section aria-labelledby="literary-2">
-					<h3 id="literary-2">Beyond the Literary #2</h3>
+					<h3 id="literary-2">Beyond the Literary</h3>
 					<div><a href="/html/zoomcasts/brice-hayward-reeder.html"><img loading="lazy" src="/img/zoomcasts/brice-hayward-reeder-930px.jpg" srcset="/img/zoomcasts/brice-hayward-reeder-1275px.jpg 1275w, /img/zoomcasts/brice-hayward-reeder-930px.jpg 930w, /img/zoomcasts/brice-hayward-reeder-816px.jpg 816w, /img/zoomcasts/brice-hayward-reeder-663px.jpg 663w, /img/zoomcasts/brice-hayward-reeder-532px.jpg 532w, /img/zoomcasts/brice-hayward-reeder-465px.jpg 465w, /img/zoomcasts/brice-hayward-reeder-408px.jpg 408w, /img/zoomcasts/brice-hayward-reeder-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders images of Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder"/><span>Michelle Prain Brice, Jennifer Hayward, Jessie Reeder</span></a></div>
 					<p>Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder speak with Ryan D. Fong about how print culture forms a crucial archive for understanding Chile as part of Britain’s “informal empire.”</p>
 				</section>
 
 				<section aria-labelledby="positionality-2">
-					<h3 id="positionality-2">Positionality #2</h3>
+					<h3 id="positionality-2">Positionality</h3>
 					<div><a href="/html/zoomcasts/aslami.html"><img loading="lazy" src="/img/zoomcasts/aslami-930px.jpg" srcset="/img/zoomcasts/aslami-1275px.jpg 1275w, /img/zoomcasts/aslami-930px.jpg 930w, /img/zoomcasts/aslami-816px.jpg 816w, /img/zoomcasts/aslami-663px.jpg 663w, /img/zoomcasts/aslami-532px.jpg 532w, /img/zoomcasts/aslami-465px.jpg 465w, /img/zoomcasts/aslami-408px.jpg 408w, /img/zoomcasts/aslami-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Zarena Aslami"/><span>Zarena Aslami</span></a></div>
 					<p>Zarena Aslami speaks with Pearl Chaozon Bauer about the importance of collaborating on research projects and supporting students, colleagues and each other.</p>
 				</section>
 
 				<section aria-labelledby="literary-1">
-					<h3 id="literary-1">Beyond the Literary #1</h3>
+					<h3 id="literary-1">Beyond the Literary</h3>
 					<div><a href="/html/zoomcasts/rudy.html"><img loading="lazy" src="/img/zoomcasts/rudy-930px.jpg" srcset="/img/zoomcasts/rudy-930px.jpg 930w, /img/zoomcasts/rudy-816px.jpg 816w, /img/zoomcasts/rudy-663px.jpg 663w, /img/zoomcasts/rudy-532px.jpg 532w, /img/zoomcasts/rudy-465px.jpg 465w, /img/zoomcasts/rudy-408px.jpg 408w, /img/zoomcasts/rudy-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Jason Rudy"/><span>Jason Rudy</span></a></div>
 					<p>Jason Rudy and Ryan D. Fong discuss the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia.</p>
 				</section>
 
 				<section aria-labelledby="positionality-1">
-					<h3 id="positionality-1">Positionality #1</h3>
+					<h3 id="positionality-1">Positionality</h3>
 					<div><a href="/html/zoomcasts/lootens.html"><img loading="lazy" src="/img/zoomcasts/lootens-930px.jpg" srcset="/img/zoomcasts/lootens-1275px.jpg 1275w, /img/zoomcasts/lootens-930px.jpg 930w, /img/zoomcasts/lootens-816px.jpg 816w, /img/zoomcasts/lootens-663px.jpg 663w, /img/zoomcasts/lootens-532px.jpg 532w, /img/zoomcasts/lootens-465px.jpg 465w, /img/zoomcasts/lootens-408px.jpg 408w, /img/zoomcasts/lootens-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders image of Tricia Lootens"/><span>Tricia Lootens</span></a></div>
 					<p>Tricia Lootens and Pearl Chaozon Bauer discuss the former's academic journey, how students inform changing pedagogies, and the precarity of higher ed.</p>
 				</section>
