--- a/py/syllabus-template-1.html
+++ b/py/syllabus-template-1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>{title} | Undisciplining the Victorian Classroom</title><!-- Change -->
-		<meta name="description" content="{description}"/><!-- Change; 160 char max -->
+		<meta name="description" content="{description}"/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
@@ -55,7 +55,7 @@
 
 						<p><strong>Syllabus Guide:</strong> {syllabus-guide} <a class="mail" href="mailto:{syllabus-guide-email}?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 						
-						<p><strong>Webpage Developer(s):</strong> {webpage-dev}</p><!-- Change -->							
+						<p><strong>Webpage Developer:</strong> {webpage-dev}</p><!-- Change -->							
 
 						<p><strong>Cluster Title:</strong> {cluster-title}</p><!-- Change -->
 
