--- a/0_dev/templates+workflows/template_lesson-plan-east-asia.html
+++ b/0_dev/templates+workflows/template_lesson-plan-east-asia.html
@@ -127,7 +127,7 @@
 
 					<section class="small" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>, les. plan dev. “.” Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
+						<p>, les. plan dev. “.” Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
 					</section>
 			</main>
 			
