--- a/html/lesson_plans/africa_southern_africa.html
+++ b/html/lesson_plans/africa_southern_africa.html
@@ -192,7 +192,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Melissa Free, les. plan dev. “Southern Africa, 1820-1930.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_southern_africa.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_southern_africa.html</a>.</p>
+					<p>Melissa Free, les. plan dev. “Southern Africa, 1820-1930.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_southern_africa.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_southern_africa.html</a>.</p>
 				</section>
 			</main>
 			
