--- a/html/lesson_plans/east_asia_japanese_aesthetics.html
+++ b/html/lesson_plans/east_asia_japanese_aesthetics.html
@@ -567,7 +567,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Waiyee Loh, les. plan dev. “Japanese Aesthetics: British Perceptions and Japanese Responses.” Menglu Guo, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_japanese_aesthetics.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_japanese_aesthetics.html</a>.</p>
+					<p>Waiyee Loh, les. plan dev. “Japanese Aesthetics: British Perceptions and Japanese Responses.” Menglu Guo, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_japanese_aesthetics.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_japanese_aesthetics.html</a>.</p>
 				</section>
 			</main>
 			
