--- a/html/lesson_plans/east_asia_psychoactive_revolution.html
+++ b/html/lesson_plans/east_asia_psychoactive_revolution.html
@@ -260,7 +260,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Menglu Gao, les. plan dev. “Psychoactive Revolution and Transnational Networks.” Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_psychoactive_revolution.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_psychoactive_revolution.html</a>.</p>
+					<p>Menglu Gao, les. plan dev. “Psychoactive Revolution and Transnational Networks.” Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_psychoactive_revolution.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_psychoactive_revolution.html</a>.</p>
 				</section>
 			</main>
 			
