--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -361,7 +361,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Rae X. Yan, les. plan dev. “Victorian Realism, China, and the Politics of Form.” Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, collab. peer revs.; Sophia Hsu, clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_victorian_realism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_victorian_realism.html</a>.</p>
+					<p>Rae X. Yan, les. plan dev. “Victorian Realism, China, and the Politics of Form.” Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, collab. peer revs.; Sophia Hsu, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_victorian_realism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_victorian_realism.html</a>.</p>
 				</section>
 			</main>
 			
