--- a/html/lesson_plans/east_asia_visualizing_korea.html
+++ b/html/lesson_plans/east_asia_visualizing_korea.html
@@ -346,7 +346,7 @@
 
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Hyungji Park, les. plan dev. “Chinese Migration and Forms of Global Circulation.” Menglu Guo, Waiyee Loh, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_visualizing_korea.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_visualizing_korea.html</a>.</p>
+					<p>Hyungji Park, les. plan dev. “Chinese Migration and Forms of Global Circulation.” Menglu Guo, Waiyee Loh, Jessica R. Valdez, Rae X. Yan, collab. peer revs.; Sophia Hsu, les. plan clust. dev. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/lesson_plans/east_asia_visualizing_korea.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/east_asia_visualizing_korea.html</a>.</p>
 				</section>
 			</main>
 			
