--- a/html/assessments/(post-)colonial_biography.html
+++ b/html/assessments/(post-)colonial_biography.html
@@ -145,7 +145,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Assessment Citation (MLA)</h3>
-					<p>Amanda Mingail Shubert, dev. “(Post-)Colonial Biography.” Sarah Ohmer, peer rev.;  Pearl Chaozon Bauer, assess. guide.; H Fogarty, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/(post-)colonial_biography.html" class="cite-link">https://undiscipliningvc.org/html/assessments/(post-)colonial_biography.html</a>.</p>
+					<p>Amanda Mingail Shubert, dev. “(Post-)Colonial Biography.” Sarah Ohmer, peer rev.;  Pearl Chaozon Bauer, assess. guide; H Fogarty, copyed. <em>Undisciplining the Victorian Classroom</em>, 2023, <a href="/html/assessments/(post-)colonial_biography.html" class="cite-link">https://undiscipliningvc.org/html/assessments/(post-)colonial_biography.html</a>.</p>
 				</section>
 			</main>
 			
