--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -45,6 +45,11 @@
 					<p>These lesson plans are organized in clusters around specific themes and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian Studies with our students, as we continue to undiscipline ourselves and our field.</p>
 				</section>
 
+				<section aria-labelledby="decadence-cfp">
+					<h3 id="decadence-cfp">Call for Lesson Plans: Global Decadence and Aestheticism (2024)</h3>
+					<div><a href="/html/lesson_plans/call_for_lesson_plan_decadence.html"><img style="object-position: 50% 100%;" loading="lazy" src="/img/about/tiles/uvc_0045-930px.jpg" srcset="/img/about/tiles/uvc_0045-930px.jpg 930w, /img/about/tiles/uvc_0045-814px.jpg 814w, /img/about/tiles/uvc_0045-662px.jpg 662w, /img/about/tiles/uvc_0045-568px.jpg 568w, /img/about/tiles/uvc_0045-530px.jpg 530w, /img/about/tiles/uvc_0045-465px.jpg 465w, /img/about/tiles/uvc_0045-407px.jpg 407w, /img/about/tiles/uvc_0045-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A geometric and concentric hexagonal tapestry"/><p class="new">New</p></a></div>
+				</section>
+
 				<section aria-labelledby="contemporary-1">
 					<h3 id="contemporary-1">Undisciplining in and through Contemporary Texts</h3>
 					<div><a href="/html/lesson_plans/contemporary_undisciplining_introduction.html"><img style="object-position: 50% 100%;" loading="lazy" src="/img/lesson_plans/tiles/uvc_0084-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0084-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0084-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0084-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0084-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0084-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0084-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0084-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0084-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A sweeping vista of the city of Palestine with people kneeling in the foreground."/><span>Cluster Introduction</span><p class="new">New</p></a></div>
